// protoc --go_out=plugins=grpc:. *.proto

syntax = "proto3";

package passbook;

option go_package = "github.com/22fariz22/passbook";

message Session {
  string session = 1;
}

message User {
  string uuid = 1;
  string login = 2;
  string password = 3;
}

message RegisterRequest {
  string login = 1;
  string password = 2;

}

message RegisterResponse {
  User user = 1;
}

message FindByLoginRequest {
  string login = 1;
}

message FindByLoginResponse {
  User user = 1;
}

message FindByIDRequest {
  string uuid = 1;
}

message FindByIDResponse {
  User user = 1;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
  string session_id = 2;
}

message GetMeRequest{}

message GetMeResponse {
  User user = 1;
}


message LogoutRequest{}

message LogoutResponse {}

service UserService{
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc FindByLogin(FindByLoginRequest) returns (FindByLoginResponse);
  rpc FindByID(FindByIDRequest) returns (FindByIDResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetMe(GetMeRequest) returns(GetMeResponse);
  rpc Logout(LogoutRequest) returns(LogoutResponse);
}